--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -16,10 +16,22 @@ apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
 
 android {
+
+    packagingOptions {
+        jniLibs {
+            pickFirsts += ['**/*.so']
+        }
+    }
     namespace = 'org.firstinspires.ftc.teamcode'
+    androidResources {
+        noCompress 'tflite'
+    }
 }
 
 dependencies {
     implementation project(':FtcRobotController')
+    implementation 'org.ftclib.ftclib:vision:2.0.1' // vision
+    implementation 'org.ftclib.ftclib:core:2.0.1' // core
+    implementation 'org.openftc:opencv-repackaged:4.5.3-B'
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 }
