--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -34,4 +34,6 @@ dependencies {
     implementation 'org.ftclib.ftclib:core:2.0.1' // core
     implementation 'org.openftc:opencv-repackaged:4.5.3-B'
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+    implementation 'com.acmerobotics.roadrunner:core:0.5.5'
 }
