--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -1,6 +1,7 @@
 repositories {
     mavenCentral()
     google() // Needed for androidx
+    maven { url = 'https://maven.brott.dev/' }
     flatDir {
         dirs rootProject.file('libs')
     }
@@ -21,5 +22,8 @@ dependencies {
     implementation 'org.ftclib.ftclib:vision:2.0.1' // vision
     implementation 'org.ftclib.ftclib:core:2.0.1' // core
     implementation 'org.openftc:opencv-repackaged:4.5.3-B'
+    implementation 'com.acmerobotics.dashboard:dashboard:0.4.4'
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+    implementation 'com.acmerobotics.roadrunner:core:0.5.5'
 }
 
