--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -4,6 +4,7 @@ repositories {
     flatDir {
         dirs rootProject.file('libs')
     }
+    maven { url = 'https://maven.brott.dev/' }
 }
 
 dependencies {
@@ -21,5 +22,7 @@ dependencies {
     implementation 'org.ftclib.ftclib:vision:2.0.1' // vision
     implementation 'org.ftclib.ftclib:core:2.0.1' // core
     implementation 'org.openftc:opencv-repackaged:4.5.3-B'
+    implementation 'com.acmerobotics.roadrunner:core:0.5.6'
+    implementation 'com.acmerobotics.dashboard:dashboard:0.4.6'
 }
 
